kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice
spec:
  selector:
    matchLabels:
      app: microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
        - name: microservice
          image: core4life/arcmicroservices:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1
