kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
  labels:
    app: microservice
spec:
  type: NodePort
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 8080
      name: http
